fix(ui): prevent table text overflow

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -74,9 +74,11 @@ code, pre {
 
 .table {
   border-collapse: collapse;
+  table-layout: fixed;
   width: 100%;
 
   td {
+    overflow: hidden;
     font-size: 0.8rem;
     font-weight: 400;
   }
